Refactor objectives checker